--- a/service/build.gradle
+++ b/service/build.gradle
@@ -49,11 +49,17 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-webflux'
         implementation 'org.projectlombok:lombok'
-        runtimeOnly 'com.h2database:h2'
         annotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testImplementation 'io.projectreactor:reactor-test'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+        // h2
+        runtimeOnly 'com.h2database:h2'
+
+        //log4j2
+        testImplementation 'org.springframework.boot:spring-boot-starter-log4j2'
+        implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     }
 
     tasks.named('test') {
